--- a/views/widget/xSlider/guanggao_slider.html
+++ b/views/widget/xSlider/guanggao_slider.html
@@ -1,19 +1,18 @@
 {% macro slideMove(guanggao,helper,ad_seat_index) %}
 		{% for picitem in guanggao %}
 			{% if helper.adseatCompare(picitem.ad_seat,ad_seat_index) %}
-			<div class="dui-layout-lg clearfix swiper-container swiper-container_{{ad_seat_index}}" data-slider="{{picitem.setting.length}}" style="margin-top:5px;width:1200px;overflow:hidden;">
+			<div class="dui-layout-lg clearfix swiper-container_{{ad_seat_index}}" data-slider="{{picitem.setting.length}}" style="margin-top:5px;width:1200px;overflow:hidden;">
 				{% if picitem.setting.length > 3 %}
 					<div class="home-guanggao swiper-wrapper" style="overflow:hidden;margin-right:-20px;height:120px;">
 					{% for ad_pic in picitem.setting %}
-						<div class="swiper-slide" style="width:386px;">
-							<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank">
-								<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px"/>
+						<div class="swiper-slide">
+							<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank" style="margin-right:10px;margin-left:10px;">
+								<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px;"/>
 							</a>
 						</div>
 					{% endfor %}
 					</div>
-					<div class="device"><a class="arrow-left"></a>
-					<a class="arrow-right"></a></div>
+
 				{% else %}
 				<div class="home-guanggao" style="float:left;overflow:hidden;margin-right:-20px;height:120px;">
 					{% for ad_pic in picitem.setting %}
