--- a/views/widget/xSlider/guanggao_slider.html
+++ b/views/widget/xSlider/guanggao_slider.html
@@ -15,7 +15,7 @@
 					<div class="device"><a class="arrow-left"></a>
 					<a class="arrow-right"></a></div>
 				{% else %}
-				<div class="home-guanggao" style="float:left;overflow:hidden;margin-right:-20px;height:120px;">
+				<div class="home-guanggao" style="float:left;overflow:hidden;margin-right:-20px;line-height: 0">
 					{% for ad_pic in picitem.setting %}
 						<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank">
 								<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px"/>
