ie8浮动条icon样式兼容

--- a/views/widget/detail_bar/detail_bar.html
+++ b/views/widget/detail_bar/detail_bar.html
@@ -4,9 +4,9 @@
         <div class="bar_title">{{article.article_info.title}}</div>
         <div class="bar_options">
             <div class="bdsharebuttonbox share_buttons clearfix">
-                <a href="#" class="bds_tsina sina" data-cmd="tsina" title="分享到新浪微博"></a>
-                <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
-                <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间"></a>
+                <a href="#" class="bds_tsina sina" data-cmd="tsina" title="分享到新浪微博" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/xl.png',sizingMethod='scale'"></a>
+                <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/wx.png',sizingMethod='scale'"></a>
+                <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/qqspace.png',sizingMethod='scale'"></a>
             </div>
             <div class="option_buttons">
                 <span class="comments_num" data-totalNum="{{article.article_info.votes + article.article_info.comments}}" id="totalNum"></span><span class="comment_text">评论</span><a href="javascript:;" class="iconfont comment_btn" id="fix_bar_comment">&#xe61c;</a>
