--- a/public/assets/css/search_result.css
+++ b/public/assets/css/search_result.css
@@ -86,7 +86,7 @@
     font-size: 14px;
     color: #333;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: 0 0;
     -webkit-background-size: cover;
     background-size: cover;
 }
