修改回复和草稿箱

--- a/views/draft.html
+++ b/views/draft.html
@@ -212,7 +212,7 @@
                 window.location.reload();
               },1000);
             }else{
-              layer.msg('发布失败')
+              layer.msg(result.err);
             }
           },
            error:function(XMLHttpRequest, textStatus, errorThrown){
