--- a/views/widget2/comment/comment.css
+++ b/views/widget2/comment/comment.css
@@ -153,6 +153,7 @@
 	border-bottom: 1px dashed #dcdcdc;
 	padding-top:8px;
 	padding-bottom: 8px;
+	width:690px;
 }
 .reply-list-info-top{
 	word-break:break-all;
