--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -388,7 +388,41 @@
       }
       editor.create();
       
-      $('#sureBtn').on('click', function () {
+      $('#sureBtn').on('click',surePublish); //发布文章
+      $("#save-draft").on("click",savePublish); //保存草稿箱
+      $("#article-preview").on("click",function(){
+        //文章预览
+        if($("#rel-case-title").val()==''){
+          // 判断title
+          $("#rel-case-title").focus();
+          return false;
+        }
+
+        if($("#art_abs").val()==''){
+          // 判断文章摘要
+          $("#art_abs").focus();
+          return false;
+        }
+
+        if(editor.txt.text()== ''){
+          //判断正文
+          layer.msg("请输入正文内容");
+          return false;
+        }    
+        //跳转预览详情页
+
+          if(login_ss.usertype ==2){
+            if(artType == 1){
+                window.open('/advisor_center/case/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+            }else {
+                window.open('/advisor_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+            }
+
+        }else if(login_ss.usertype ==3){
+          window.open('/canzan_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+        }
+      });
+      function surePublish(){
         // 读取 html
         var data = editor.txt.html();
         if(newsletterType==1){
@@ -420,7 +454,6 @@
           }
           newTagStr =tagStr.substring(0,tagStr.length-1);
         }
-
         if($("#rel-case-title").val()==''){
           // 判断title
           $("#rel-case-title").focus();
@@ -436,7 +469,8 @@
           layer.msg("请输入正文内容");
           return false;
         }
-        
+        $(this).unbind('click');
+        var that =this;
         $.ajax({
           url: '/soapi/publish_article',
           type:'POST',
@@ -472,10 +506,13 @@
               }
             }else if(result.code == '1210000011'){
               layer.msg('标题已存在，请更换标题');
+              $(that).bind('click',surePublish);
             }else if(result.code == '1210000012'){
               layer.msg('您编辑器输入的内容有敏感词');
+              $(that).bind('click',surePublish);
             }else{
-              layer.msg('发布失败')
+              layer.msg('发布失败');
+              $(that).bind('click',surePublish);
             }
           },
           error:function(XMLHttpRequest, textStatus, errorThrown){
@@ -483,10 +520,11 @@
             if(XMLHttpRequest.status == '413'){
               layer.msg('您发布的内容已超过2M，应小于2M');
             }
+            $(that).bind('click',surePublish);
           }
         });
-      });
-      $("#save-draft").on("click",function(){
+      }
+      function savePublish(){
         //保存草稿箱
         var data = editor.txt.html();
         if(newsletterType==1){
@@ -535,7 +573,8 @@
           layer.msg("请输入正文内容");
           return false;
         }   
-        
+        $(this).unbind('click');
+        var that = this;
         $.ajax({
           url: '/soapi/publish_article',
           type:'POST',
@@ -568,10 +607,13 @@
               },1000);
             }else if(result.code == '1210000011'){
               layer.msg('标题已存在，请更换标题');
+              $(that).bind('click',savePublish);
             }else if(result.code == '1210000012'){
               layer.msg('您编辑器输入的内容有敏感词');
+              $(that).bind('click',savePublish);
             }else{
-              layer.msg('保存失败')
+              layer.msg('保存失败');
+              $(that).bind('click',savePublish);
             }
           },
           error:function(XMLHttpRequest, textStatus, errorThrown){
@@ -579,41 +621,10 @@
             if(XMLHttpRequest.status == '413'){
               layer.msg('您发布的内容已超过2M，应小于2M');
             }
+            $(that).bind('click',savePublish);
           }
         });
-      });
-      $("#article-preview").on("click",function(){
-        //文章预览
-        if($("#rel-case-title").val()==''){
-          // 判断title
-          $("#rel-case-title").focus();
-          return false;
-        }
-
-        if($("#art_abs").val()==''){
-          // 判断文章摘要
-          $("#art_abs").focus();
-          return false;
-        }
-
-        if(editor.txt.text()== ''){
-          //判断正文
-          layer.msg("请输入正文内容");
-          return false;
-        }    
-        //跳转预览详情页
-
-          if(login_ss.usertype ==2){
-            if(artType == 1){
-                window.open('/advisor_center/case/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
-            }else {
-                window.open('/advisor_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
-            }
-
-        }else if(login_ss.usertype ==3){
-          window.open('/canzan_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
-        }
-      });
+      }
     })  
   </script>
 </body>
