--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -10,8 +10,69 @@
   .xuanze-chengshi p a:last-child{
     margin-right: 0;
   }
+  .nationality_guoqi_warp{
+    width: 1200px;
+    left: 50%;
+    margin-left: -600px;
+    position: fixed;
+    z-index: 999;
+    display: none;
+    border-top: 0px;
+  }
+  .nationality_guoqi{
+    /*display: flex;*/
+    width: 1154px;
+    height: 141px;
+    border: 3px solid #c13232;
+    background: #f1f4f6;
+    padding: 0 20px;
+    position: relative;
+    margin: 0 auto;
+  }
+  .liuxue-guoqi img{
+    width:46px;
+    height:30px;
+    margin: 0;
+
+  }
+  .liuxue-guoqi{
+    width: 100%;
+    height: auto;
+  }
+  .liuxue-guoqi p{
+    color:#333 ;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 5px;
+  }
   .liuxue-guoqi a{
+    width: auto;
     margin: 10px 0px 25px 87px;
+    height:30px;
+    display:block;
+    float: left;
+    position: relative;
+    border: 0px;
+  }
+  .liuxue-guojia-title{
+    position: absolute;
+    width: 174px;
+    height: 30px;
+    border: 3px solid #c13232;
+    border-top: 3px solid #f1f4f6;
+    color: #c13232;
+    font-size: 16px;
+    text-align: center;
+    line-height: 24px;
+    /* border-radius: 15px; */
+    /*margin: 0 auto;*/
+    /*margin-top: -3px;*/
+    /*z-index: 999999;*/
+    background: #f1f4f6;
+    bottom: -36px;
+    left: 50%;
+    margin-left: -77px;
+    padding: 0;
   }
 </style>
 </head>
