--- a/views/center_main.html
+++ b/views/center_main.html
@@ -139,9 +139,11 @@
                 {% if collection_list and collection_list.list.length > 0 %}
                 <div class="follow-me clearfix">
                     {% for item in collection_list.list %}
+                    <div id="art_box_{{item.id}}">
                         {% import "widget2/article/article.html" as article_show %}
                         {{ article_show.adviser_show(item, helper) }}
                     {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
+                    </div>
                     {% endfor %}
                 </div>
                 {% else %}
@@ -204,7 +206,7 @@
 <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_wode.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
